language/move-lang/tests/move_check/folding/unfoldable_constants.exp
error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants.move:3:22
  │
3 │     const SHL0: u8 = 1 << 8;
  │                      ^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants.move:4:23
  │
4 │     const SHL1: u64 = 1 << 64;
  │                       ^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants.move:5:24
  │
5 │     const SHL2: u128 = 1 << 128;
  │                        ^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants.move:7:22
  │
7 │     const SHR0: u8 = 0 >> 8;
  │                      ^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants.move:8:23
  │
8 │     const SHR1: u64 = 0 >> 64;
  │                       ^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants.move:9:24
  │
9 │     const SHR2: u128 = 0 >> 128;
  │                        ^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:11:22
   │
11 │     const DIV0: u8 = 1 / 0;
   │                      ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:12:23
   │
12 │     const DIV1: u64 = 1 / 0;
   │                       ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:13:24
   │
13 │     const DIV2: u128 = 1 / 0;
   │                        ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:15:22
   │
15 │     const MOD0: u8 = 1 % 0;
   │                      ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:16:23
   │
16 │     const MOD1: u64 = 1 % 0;
   │                       ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:17:24
   │
17 │     const MOD2: u128 = 1 % 0;
   │                        ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:19:22
   │
19 │     const ADD0: u8 = 255 + 255;
   │                      ^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:20:23
   │
20 │     const ADD1: u64 = 18446744073709551615 + 18446744073709551615;
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:22:9
   │
22 │         340282366920938463463374607431768211450 + 340282366920938463463374607431768211450;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:24:22
   │
24 │     const SUB0: u8 = 0 - 1;
   │                      ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:25:23
   │
25 │     const SUB1: u64 = 0 - 1;
   │                       ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:26:24
   │
26 │     const SUB2: u128 = 0 - 1;
   │                        ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:28:23
   │
28 │     const CAST0: u8 = ((256: u64) as u8);
   │                       ^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:29:24
   │
29 │     const CAST1: u64 = ((340282366920938463463374607431768211450: u128) as u64);
   │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

